# OnLand

./: .devcontainer.json  .gitignore  Dockerfile  Dockerfile.prod  Dockerfile.test  LICENSE  README.md  docker-compose-example.yaml
.devcontainer/: docker-compose copy.yaml  docker-compose.devcontainer.yaml
.devcontainer/preprocessing/: Dockerfile.dev  devcontainer.json
.devcontainer/rust/: devcontainer.json
preprocessing/: .gitignore  initprocess.py  main.py
preprocessing/data/input/: realworld.dbf
preprocessing/generation/: shapes.py
preprocessing/preprocessing/: shapes.py
preprocessing/testgen/: testgen.py
proj/: Cargo.toml  playround.py
proj/ProperGrids/: Trial14Feb.dbf  Trial14Feb.shx
proj/WestCoatUSAGridDiff/: WestCoatUSAGridDiff.dbf  WestCoatUSAGridDiff.shx
proj/data/: world.dbf  world.shp  world.shx
proj/src/: main.rs
rust/: Cargo.toml  license
rust/src/: data.rs  geospatial.rs  lib.rs  main.rs  routes.rs  services.rs
rust/src/services/: geospatial.rs
rust/tests/: other.rs  test.rs  utils.rs
