[package]
name = "on_land"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
env_logger = "0.11.6"
geo = "0.29.3"
geo-types = "0.7.15"
log = "0.4.26"
serde = "1.0.218"
serde_json = "1.0.139"
shapefile = {version = "0.6.0", features=["geo-types"]}

[dev-dependencies]
csv = "1.3.1"
